scripts/nullaway/nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8.txt
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:35: error: [NullAway] @NonNull field mission not initialized
    private Mission mission;
                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Open688Server.java:37: error: [NullAway] @NonNull field tickerThread not initialized
    private Thread tickerThread;
                   ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Station.java:11: error: [NullAway] initializer method does not guarantee @NonNull field app (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Station(int clientId) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/Station.java:36: error: [NullAway] dereferenced expression super.out is @Nullable
                super.out.write(("\n\n" + app.getStatus() + "'\n\n").getBytes());
                         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:26: error: [NullAway] initializer method does not guarantee @NonNull fields server (line 13), socket (line 15), din (line 20) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TelnetClientServer(int clientId) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:59: error: [NullAway] dereferenced expression out is @Nullable
            out.writeUTF(string);
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:81: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:86: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:96: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/TelnetClientServer.java:112: error: [NullAway] dereferenced expression out is @Nullable
            out.close();
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/campaign/Mission.java:10: error: [NullAway] @NonNull field capitalShip not initialized
    private Ship capitalShip;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Ship.java:52: error: [NullAway] parameter ms is @NonNull, but parameter in superclass method br.odb.open688.simulation.campaign.Target.update(long) is @Nullable
    public void update(long ms) {
                            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Ship.java:70: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return shipParts.get(name);
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Crew.java:5: error: [NullAway] @NonNull field crewMembers not initialized
    CrewMember[] crewMembers;
                 ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Crew.java:7: error: [NullAway] @NonNull field numberOne not initialized
    CrewMember numberOne;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/Crew.java:9: error: [NullAway] @NonNull field captain not initialized
    CrewMember captain;
               ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/CrewMember.java:7: error: [NullAway] @NonNull field name not initialized
    String name;
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/ship/CrewMember.java:9: error: [NullAway] @NonNull field rank not initialized
    Rank rank;
         ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/campaign/Rank.java:5: error: [NullAway] @NonNull field name not initialized
    String name;
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/app/net/HTTPStatusTicker.java:43: error: [NullAway] initializer method does not guarantee @NonNull fields server (line 35), socket (line 37), out (line 39) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public HTTPStatusTicker(Open688Server openSubServer) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url6f0c51b1b4_TheFakeMontyOnTheRun_open688_tgz-pJ8-br_odb_open688_app_Open688ServerJ8/src/br/odb/open688/simulation/campaign/Docks.java:13: error: [NullAway] initializer method does not guarantee @NonNull field dockedShips (line 9) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Docks(Vec3 coordinates, TargetType type, int capacity) {
           ^
    (see http://t.uber.com/nullaway )
21 errors
